--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US" class="scheme_original">
 <head>
-	<title>Hope</title>
+	<title>North Omaha Collective</title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="format-detection" content="telephone=no"><link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
 	<link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
@@ -36,9 +40,10 @@
 				<div class="top_panel_wrap_inner top_panel_inner_style_1 top_panel_position_above">
 					<div class="top_panel_middle">
 						<div class="content_wrap">
+							<img src="images/logo.png" class="logo_main" alt="" width="50" height="50">
 							<div class="contact_logo">
 								<div class="logo">
-									<a href="index.html">North Omaha Collective<!--<img src="images/logo.png" class="logo_main" alt="" width="118" height="69">--></a>
+									<a href="index.html"> North Omaha Collective<!--<img src="images/logo.png" class="logo_main" alt="" width="118" height="69">--></a>
 								</div>
 							</div>
 							<div class="contact_button">
@@ -223,48 +228,16 @@
 				<div id="rev_slider_1_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container">
 					<!-- START REVOLUTION SLIDER 5.2.5.4 fullwidth mode -->
 					<div id="rev_slider_1_1" class="rev_slider fullwidthabanner" data-version="5.2.5.4">
-						<ul>
-							<!-- SLIDE  -->
-							<li data-index="rs-1" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="300" data-rotate="0" data-saveperformance="off" data-title="Slide"
-											data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-								<!-- MAIN IMAGE -->
-								<img src="images/slider_1_1.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
-								<!-- LAYERS -->
-								<!-- LAYER NR. 1 -->
-								<div class="tp-caption TRX-subtitle   tp-resizeme  extra" id="slide-1-layer-1" data-x="right" data-hoffset="372" data-y="160" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:1500;e:Power2.easeInOut;"
-												data-transform_out="opacity:0;s:300;" data-start="600" data-splitin="none" data-splitout="none" data-responsive_offset="on" data-captionhidden="on">Community Foundation </div>
-								<!-- LAYER NR. 2 -->
-								<div class="tp-caption TRX-title   tp-resizeme" id="slide-1-layer-2" data-x="right" data-hoffset="33" data-y="203" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:1400;e:Power2.easeInOut;"
-												data-transform_out="opacity:0;s:300;" data-start="1200" data-splitin="none" data-splitout="none" data-responsive_offset="on">Help Senior<br/> Citizens </div>
-								<!-- LAYER NR. 3 -->
-								<div class="tp-caption TRX-button   tp-resizeme" id="slide-1-layer-3" data-x="right" data-hoffset="285" data-y="499" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:1400;e:Power2.easeInOut;"
-												data-transform_out="opacity:0;s:300;" data-start="1700" data-splitin="none" data-splitout="none" data-responsive_offset="on"><a href="our-causes.html" class="sc_button sc_button_square sc_button_style_filled2 sc_button_size_large  sc_button_iconed icon-arrow">How You Can Help?</a> </div>
-							</li>
-							<!-- SLIDE  -->
-							<li data-index="rs-2" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="300" data-rotate="0" data-saveperformance="off" data-title="Slide"
-											data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-								<!-- MAIN IMAGE -->
-								<img src="images/slider_1_2.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
-								<!-- LAYERS -->
-								<!-- LAYER NR. 1 -->
-								<div class="tp-caption TRX-subtitle-white   tp-resizeme  extra" id="slide-2-layer-1" data-x="right" data-hoffset="382" data-y="160" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:1500;e:Power2.easeInOut;"
-												data-transform_out="opacity:0;s:300;" data-start="600" data-splitin="none" data-splitout="none" data-responsive_offset="on" data-captionhidden="on">Community Foundation </div>
-								<!-- LAYER NR. 2 -->
-								<div class="tp-caption TRX-title-white   tp-resizeme" id="slide-2-layer-2" data-x="right" data-hoffset="38" data-y="210" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:1400;e:Power2.easeInOut;"
-												data-transform_out="opacity:0;s:300;" data-start="1200" data-splitin="none" data-splitout="none" data-responsive_offset="on">Why Work for<br/> a Charity? </div>
-								<!-- LAYER NR. 3 -->
-								<div class="tp-caption TRX-button   tp-resizeme" id="slide-2-layer-3" data-x="right" data-hoffset="295" data-y="497" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:1400;e:Power2.easeInOut;"
-												data-transform_out="opacity:0;s:300;" data-start="1700" data-splitin="none" data-splitout="none" data-responsive_offset="on"><a href="our-causes.html" class="sc_button sc_button_square sc_button_style_filled2 sc_button_size_large  sc_button_iconed icon-arrow">How You Can Help?</a> </div>
-							</li>
+						<ul>							
 							<!-- SLIDE  -->
 							<li data-index="rs-3" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="300" data-rotate="0" data-saveperformance="off" data-title="Slide"
 											data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 								<!-- MAIN IMAGE -->
-								<img src="images/slider_1_3.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+								<img src="images/kidscrowd.jpg" style="opacity: 0.8;" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
 								<!-- LAYERS -->
 								<!-- LAYER NR. 1 -->
 								<div class="tp-caption TRX-subtitle-white   tp-resizeme  extra" id="slide-3-layer-1" data-x="145" data-y="152" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:1500;e:Power2.easeInOut;" data-transform_out="opacity:0;s:300;"
-												data-start="600" data-splitin="none" data-splitout="none" data-responsive_offset="on" data-captionhidden="on">Nature Foundation </div>
+												data-start="600" data-splitin="none" data-splitout="none" data-responsive_offset="on" data-captionhidden="on">North Omaha Collective </div>
 								<!-- LAYER NR. 2 -->
 								<div class="tp-caption TRX-title-white   tp-resizeme" id="slide-3-layer-2" data-x="140" data-y="200" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="y:50px;opacity:0;s:1400;e:Power2.easeInOut;" data-transform_out="opacity:0;s:300;"
 												data-start="1200" data-splitin="none" data-splitout="none" data-responsive_offset="on">Give a little.<br/> Change a lot. </div>
@@ -290,8 +263,8 @@
 												<div id="sc_services_1443866382_wrap" class="sc_services_wrap">
 													<div id="sc_services_1443866382" class="sc_services sc_services_style_services-1 sc_services_type_images  margin_top_huge margin_bottom_huge">
 														<h2 class="sc_services_title sc_item_title sc_item_title_without_descr">Our Mission</h2>
-														<div class="sc_services_descr sc_item_descr">Protecting the rights and wellbeing of EVERY child</div>
-														<div class="sc_columns columns_wrap">
+														<div class="sc_services_descr sc_item_descr">The mission of the North Omaha Collective is to build the capacity of African American youth serving organizations to claim their voice, improve their overall impact, cultivate healing, and take corageous action to improve the well being of children and families in the North Omaha community</div>
+														<!--<div class="sc_columns columns_wrap">
 															<div class="column-1_3 column_padding_bottom">
 																<div id="sc_services_1443866382_1" class="sc_services_item sc_services_item_1 odd first">
 																	<div class="sc_services_item_featured post_featured">
@@ -333,7 +306,7 @@
 																</div>
 															</div>
 														</div>
-														<div class="sc_services_button sc_item_button"><a href="shop.html" class="sc_button sc_button_square sc_button_style_filled sc_button_size_large  sc_button_iconed icon-arrow">Learn more about Hope</a></div>
+														<div class="sc_services_button sc_item_button"><a href="shop.html" class="sc_button sc_button_square sc_button_style_filled sc_button_size_large  sc_button_iconed icon-arrow">Learn more about Hope</a></div>-->
 													</div>
 													<!-- /.sc_services -->
 												</div>
@@ -349,12 +322,12 @@
 											<div class="wrapper">
 												<div class="h55"></div>
 												<div id="sc_donations_108588160" class="sc_donations sc_donations_style_excerpt">
-													<h2 class="sc_donations_title sc_item_title">Our Causes</h2>
-													<div class="sc_donations_descr sc_item_descr">You can help lots of people by donating little. <b>See our causes.</b></div>
+													<h2 class="sc_donations_title sc_item_title">Our Vision</h2>
+													<div class="sc_donations_descr sc_item_descr">The vision is to collectively create long lasting change in and beyond the North Omaha community for African Amrerican children and families.</div>
 													<div class="sc_donations_columns_wrap">
 														<div class="post_item_excerpt post_type_donation sc_donations_column-1_3">
 															<div class="post_featured">
-																<img width="570" height="320" src="images/image-16-570x320.jpg" class="attachment-thumb_med size-thumb_med" alt="Education to Every Child" />
+																<img width="570" height="320" src="images/education.jpg" class="attachment-thumb_med size-thumb_med" alt="Education to Every Child" />
 															</div>
 															<!-- .post_featured -->
 															<div class="post_body">
@@ -384,7 +357,7 @@
 														</div>
 														<div class="post_item_excerpt post_type_donation sc_donations_column-1_3">
 															<div class="post_featured">
-																<img width="570" height="320" src="images/image-14-570x320.jpg" class="attachment-thumb_med size-thumb_med" alt="Primary School for Kids" /> </div>
+																<img width="570" height="320" src="images/school.jpg" class="attachment-thumb_med size-thumb_med" alt="Primary School for Kids" /> </div>
 															<!-- .post_featured -->
 															<div class="post_body">
 																<div class="post_header entry-header">
@@ -412,7 +385,7 @@
 														</div>
 														<div class="post_item_excerpt post_type_donation sc_donations_column-1_3">
 															<div class="post_featured">
-																<img width="570" height="320" src="images/image-15-570x320.jpg" class="attachment-thumb_med size-thumb_med" alt="Patient and Family Support" /> </div>
+																<img width="570" height="320" src="images/support.jpg" class="attachment-thumb_med size-thumb_med" alt="Patient and Family Support" /> </div>
 															<!-- .post_featured -->
 															<div class="post_body">
 																<div class="post_header entry-header">
@@ -442,6 +415,71 @@
 												</div>
 												<!-- /.sc_donations -->
 												<div class="h28"></div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="block_1473435558335">
+									<div class="column_container">
+										<div class="column-inner">
+											<div class="wrapper">
+												<div id="sc_services_1443866382_wrap" class="sc_services_wrap">
+													<div id="sc_services_1443866382" class="sc_services sc_services_style_services-1 sc_services_type_images  margin_top_huge margin_bottom_huge">
+														<h2 class="sc_services_title sc_item_title sc_item_title_without_descr">Who We Are</h2>
+														<div class="sc_services_descr sc_item_descr">
+															The North Omaha Collective (NOC) is a coalition of African American community leaders
+															 who are committed to improving their collective work with African American children and families
+															  in North Omaha.  The North Omaha Collective believes that change is most impactful when those involved are corageaous, vulnerable, and committed to doing their own healing work to better
+															   serve the children and families of North Omaha.  
+														</div>
+														<!--<div class="sc_columns columns_wrap">
+															<div class="column-1_3 column_padding_bottom">
+																<div id="sc_services_1443866382_1" class="sc_services_item sc_services_item_1 odd first">
+																	<div class="sc_services_item_featured post_featured">
+																		<div class="post_thumb" data-image="" data-title="Promoting the right and wellbeing of every child, in everything we do.">
+																			<a class="hover_icon hover_icon_link" href="#"><img width="136" height="136" alt="mission_1.png" src="images/mission_1.png"></a>
+																		</div>
+																	</div>
+																	<div class="sc_services_item_content">
+																		<h4 class="sc_services_item_title"><a href="#">Promoting the right and wellbeing of every child, in everything we do.</a></h4>
+																		<div class="sc_services_item_description">
+																		</div>
+																	</div>
+																</div>
+															</div><div class="column-1_3 column_padding_bottom">
+																<div id="sc_services_1443866382_2" class="sc_services_item sc_services_item_2 even">
+																	<div class="sc_services_item_featured post_featured">
+																		<div class="post_thumb" data-image="" data-title="Supporting Hope programs for children in more than 150 countries and territories.">
+																			<a class="hover_icon hover_icon_link" href="#"><img width="136" height="136" alt="mission_2.png" src="images/mission_2.png"></a>
+																		</div>
+																	</div>
+																	<div class="sc_services_item_content">
+																		<h4 class="sc_services_item_title"><a href="#">Supporting Hope programs for children in more than 150 countries and territories.</a></h4>
+																		<div class="sc_services_item_description">
+																		</div>
+																	</div>
+																</div>
+															</div><div class="column-1_3 column_padding_bottom">
+																<div id="sc_services_1443866382_3" class="sc_services_item sc_services_item_3 odd">
+																	<div class="sc_services_item_featured post_featured">
+																		<div class="post_thumb" data-image="" data-title="Focus on reaching the most vunerable children, to benefit all children, everywhere.">
+																			<a class="hover_icon hover_icon_link" href="#"><img width="136" height="136" alt="mission_3.png" src="images/mission_3.png"></a>
+																		</div>
+																	</div>
+																	<div class="sc_services_item_content">
+																		<h4 class="sc_services_item_title"><a href="#">Focus on reaching the most vunerable children, to benefit all children, everywhere.</a></h4>
+																		<div class="sc_services_item_description">
+																		</div>
+																	</div>
+																</div>
+															</div>
+														</div>
+														<div class="sc_services_button sc_item_button"><a href="shop.html" class="sc_button sc_button_square sc_button_style_filled sc_button_size_large  sc_button_iconed icon-arrow">Learn more about Hope</a></div>-->
+													</div>
+													<!-- /.sc_services -->
+												</div>
+												<!-- /.sc_services_wrap -->
+												<div class="h10"></div>
 											</div>
 										</div>
 									</div>
@@ -505,14 +543,14 @@
 																			<div class="sc_skills_total" data-start="0" data-stop="1560300" data-step="15603" data-max="1560300" data-speed="23" data-duration="2300" data-ed="">0</div>
 																		</div>
 																		<div class="sc_skills_info">
-																			<div class="sc_skills_label">Numbers of Volunteer Hours</div>
+																			<div class="sc_skills_label">Volunteer Hours</div>
 																		</div>
 																	</div>
 																</div>
 															</div>
 														</div>
 														<div class="wpb_text_column block_1478082122164">
-																<p><span>Curabitur vehicula metus sed sagittis venenatis. Aenean laoreet.</span></p>
+																<p><span>Curabitur vehicula metus sed sagittis venenatis. Something </span></p>
 														</div>
 														<div class="h22"></div>
 														<a href="contacts.html" class="sc_button sc_button_square sc_button_style_filled sc_button_size_large margin_top_huge margin_bottom_medium  sc_button_iconed icon-arrow">Partner With Us</a>
@@ -523,7 +561,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="block_1474283141363">
+								<!--<div class="block_1474283141363">
 									<div class="column_container">
 										<div class="column-inner">
 											<div class="wrapper">
@@ -643,7 +681,7 @@
 										</div>
 									</div>
 									</div>
-								</div>
+								</div>-->
 								<div class="block_1474540986884">
 									<div class="column_container">
 										<div class="column-inner">
@@ -753,7 +791,7 @@
 								<div class="contacts_wrap">
 									<div class="contacts_wrap_inner">
 										<div class="logo">
-											<a href="index.html"><img src="images/logo-footer.png" class="logo_footer" alt="" width="237" height="121"></a>
+											<a href="index.html"><img src="images/logo.png" class="logo_footer" alt="" width="237" height="121"></a>
 										</div>
 										<div class="contacts_address">
 											<p>Nulla fringilla orci mauris, nec tempor lectus consequat ac. Nulla consectetur magna in velit pellentesque egestas sed eget nibh. Fusce nec viverra dolor. Phasellus faucibus egestas nulla, vel suscipit metus maximus id. Phasellus blandit porttitor
@@ -852,7 +890,7 @@
 				<div class="copyright_wrap_inner">
 					<div class="content_wrap">
 						<div class="copyright_text">
-							<p><a href="#">ThemeREX</a> © 2016 All Rights Reserved. <a href="#">Terms of Use</a> and <a href="#">Privacy Policy</a></p>
+							<p>Design by:<a href="#">ThemeREX</a> © 2016 All Rights Reserved. Development by:<a href="http://www.terrataylor.com">T&T Development</a></p>
 						</div>
 					</div>
 				</div>
