--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<link property="stylesheet" rel='stylesheet' id='trx-donations-style-css'  href='js/vendor/plugins/trx_donations/trx_donations.css' type='text/css' media='all' />
 	<link property="stylesheet" rel='stylesheet' id='charity_is_hope-messages-style-css' href='js/vendor/fw/js/core.messages/core.messages.css' type='text/css' media='all' />
 	<link property="stylesheet" rel='stylesheet' id='charity_is_hope-swiperslider-style-css' href='js/vendor/fw/js/swiper/swiper.css' type='text/css' media='all' />
-	<link rel="stylesheet" href="/css/custom.css">
+	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body class="home page page-template-default body_style_wide top_style_header_1 body_filled article_style_stretch layout_single-standard template_single-standard scheme_original top_panel_show top_panel_above sidebar_hide sidebar_outer_hide">
 	<a id="toc_home" class="sc_anchor" title="Home" data-description="&lt;i&gt;Return to Home&lt;/i&gt; - &lt;br&gt;navigate to home page of the site" data-icon="icon-home" data-url="http://charity-is-hope.themerex.net/" data-separator="yes"></a>
