--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 							<nav class="menu_main_nav_area menu_hover_fade">
 								<ul id="menu_main" class="menu_main_nav">
 									<li class="menu-item current-menu-item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="#"><span>Home</span></a>
-										<ul class="sub-menu">
+										<!--<ul class="sub-menu">
 											<li class="menu-item current-menu-item page-item-2"><a href="index.html"><span>Home 1</span></a></li>
 											<li class="menu-item"><a href="home-2.html"><span>Home 2</span></a></li>
 											<li class="menu-item"><a href="home-3.html"><span>Home 3</span></a></li>
 											<li class="menu-item"><a href="home-4-boxed.html"><span>Home Boxed</span></a></li>
-										</ul>
+										</ul>-->
 									</li>
-									<li class="menu-item menu-item-has-children"><a href="#"><span>Features</span></a>
+									<!--<li class="menu-item menu-item-has-children"><a href="#"><span>Features</span></a>
 										<ul class="sub-menu">
 											<li class="menu-item"><a href="typography.html"><span>Typography</span></a></li>
 											<li class="menu-item"><a href="shortcodes.html"><span>Shortcodes</span></a></li>
@@ -116,7 +116,7 @@
 										</ul>
 									</li>
 									<li class="menu-item"><a href="shop.html"><span>Shop</span></a></li>
-									<li class="menu-item"><a href="contacts.html"><span>Contacts</span></a></li>
+									<li class="menu-item"><a href="contacts.html"><span>Contacts</span></a></li>-->
 								</ul>
 							</nav>
 							<div class="search_wrap search_style_fullscreen search_state_closed">
@@ -263,7 +263,7 @@
 												<div id="sc_services_1443866382_wrap" class="sc_services_wrap">
 													<div id="sc_services_1443866382" class="sc_services sc_services_style_services-1 sc_services_type_images  margin_top_huge margin_bottom_huge">
 														<h2 class="sc_services_title sc_item_title sc_item_title_without_descr">Our Mission</h2>
-														<div class="sc_services_descr sc_item_descr">The mission of the North Omaha Collective is to build the capacity of African American youth serving organizations to claim their voice, improve their overall impact, cultivate healing, and take corageous action to improve the well being of children and families in the North Omaha community</div>
+														<div class="sc_services_descr sc_item_descr">The mission of the North Omaha Collective is to build the capacity of African American youth serving organizations to claim their voice, improve their overall impact, cultivate healing, and take courageous action to improve the well being of children and families in the North Omaha community</div>
 														<!--<div class="sc_columns columns_wrap">
 															<div class="column-1_3 column_padding_bottom">
 																<div id="sc_services_1443866382_1" class="sc_services_item sc_services_item_1 odd first">
@@ -323,7 +323,7 @@
 												<div class="h55"></div>
 												<div id="sc_donations_108588160" class="sc_donations sc_donations_style_excerpt">
 													<h2 class="sc_donations_title sc_item_title">Our Vision</h2>
-													<div class="sc_donations_descr sc_item_descr">The vision is to collectively create long lasting change in and beyond the North Omaha community for African Amrerican children and families.</div>
+													<div class="sc_donations_descr sc_item_descr">The vision is to collectively create long lasting change in and beyond the North Omaha community for African American children and families.</div>
 													<div class="sc_donations_columns_wrap">
 														<div class="post_item_excerpt post_type_donation sc_donations_column-1_3">
 															<div class="post_featured">
@@ -429,8 +429,21 @@
 														<div class="sc_services_descr sc_item_descr">
 															The North Omaha Collective (NOC) is a coalition of African American community leaders
 															 who are committed to improving their collective work with African American children and families
-															  in North Omaha.  The North Omaha Collective believes that change is most impactful when those involved are corageaous, vulnerable, and committed to doing their own healing work to better
+															  in North Omaha.  The North Omaha Collective believes that change is most impactful when those involved are courageous, vulnerable, and committed to doing their own healing work to better
 															   serve the children and families of North Omaha.  
+														</div>
+														<div class="staff-photos">
+															<div><img src="images/staff/carolyn.png" alt="" srcset="">
+															</div>
+															<div><img src="images/staff/doris.png" alt="" srcset=""></div>
+															<div><img src="images/staff/james.png" alt="" srcset=""></div>
+															<div><img src="images/staff/kenneth.png" alt="" srcset=""></div>
+															<div><img src="images/staff/ladonna.png" alt="" srcset=""></div>
+															<div><img src="images/staff/patrick.png" alt="" srcset=""></div>
+															<div><img src="images/staff/portiac.png" alt="" srcset=""></div>
+															<div><img src="images/staff/richard.png" alt="" srcset=""></div>
+															<div><img src="images/staff/rodney.png" alt="" srcset=""></div>
+															<div><img src="images/staff/teresa.png" alt="" srcset=""></div>
 														</div>
 														<!--<div class="sc_columns columns_wrap">
 															<div class="column-1_3 column_padding_bottom">
