--- a/index.html
+++ b/index.html
@@ -599,6 +599,7 @@
 														</div>
 														<div class="staff-photos">
 															<div><img src="images/staff/Carolyn T WilliamsonSM.jpg" alt="" srcset="">
+																Carolyn Williamson
 															</div>
 															<div><img src="images/staff/Doris MooreSM.jpg" alt="" srcset="">
 															</div>
