--- a/single-team.html
+++ b/single-team.html
@@ -17,6 +17,7 @@
 	<link property="stylesheet" rel='stylesheet' id='charity_is_hope-animation-style-css' href='js/vendor/fw/css/core.animation.css' type='text/css' media='all' />
 	<link property="stylesheet" rel='stylesheet' id='charity_is_hope-shortcodes-style-css' href='js/vendor/shortcodes/theme.shortcodes.css' type='text/css' media='all' />
 	<link property="stylesheet" rel='stylesheet' id='charity_is_hope-responsive-style-css' href='css/responsive.css' type='text/css' media='all' />
+	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body class="single single-team postid-333 body_style_wide top_style_header_1 body_filled article_style_stretch layout_single-standard template_single-standard scheme_original top_panel_show top_panel_above sidebar_hide sidebar_outer_hide">
 
@@ -53,60 +54,9 @@
 						<div class="content_wrap clearfix">
 							<nav class="menu_main_nav_area menu_hover_fade">
 								<ul id="menu_main" class="menu_main_nav">
-									<li class="menu-item menu-item-home menu-item-has-children"><a href="#"><span>Home</span></a>
-										<ul class="sub-menu">
-											<li class="menu-item"><a href="index.html"><span>Home 1</span></a></li>
-											<li class="menu-item"><a href="home-2.html"><span>Home 2</span></a></li>
-											<li class="menu-item"><a href="home-3.html"><span>Home 3</span></a></li>
-											<li class="menu-item"><a href="home-4-boxed.html"><span>Home Boxed</span></a></li>
-										</ul>
-									</li>
-									<li class="menu-item menu-item-has-children"><a href="#"><span>Features</span></a>
-										<ul class="sub-menu">
-											<li class="menu-item"><a href="typography.html"><span>Typography</span></a></li>
-											<li class="menu-item"><a href="shortcodes.html"><span>Shortcodes</span></a></li>
-											<li class="menu-item menu-item-has-children"><a href="#"><span>Gallery</span></a>
-												<ul class="sub-menu">
-													<li class="menu-item"><a href="gallery-grid.html"><span>Grid</span></a></li>
-													<li class="menu-item"><a href="gallery-cobbles.html"><span>Cobbles</span></a></li>
-													<li class="menu-item1"><a href="gallery-masonry.html"><span>Masonry</span></a></li>
-												</ul>
-											</li>
-											<li class="menu-item"><a href="events.html"><span>Events</span></a></li>
-										</ul>
-									</li>
-									<li class="menu-item menu-item-has-children menu-item-45"><a href="#"><span>About Us</span></a>
-										<ul class="sub-menu">
-											<li class="menu-item"><a href="about-us-style-1.html"><span>Style 1</span></a></li>
-											<li class="menu-item"><a href="about-us-style-2.html"><span>Style 2</span></a></li>
-										</ul>
-									</li>
-									<li class="menu-item menu-item-has-children"><a href="#"><span>Our Causes</span></a>
-										<ul class="sub-menu">
-											<li class="menu-item"><a href="our-causes.html"><span>Our Causes</span></a></li>
-											<li class="menu-item"><a href="single-cause.html"><span>Single Cause</span></a></li>
-										</ul>
-									</li>
-									<li class="menu-item current_page_parent menu-item-has-children"><a href="#"><span>News</span></a>
-										<ul class="sub-menu">
-											<li class="menu-item current_page_parent"><a href="all-posts.html"><span>Classic With Sidebar</span></a></li>
-											<li class="menu-item"><a href="classic-without-sidebar.html"><span>Classic Without Sidebar</span></a></li>
-											<li class="menu-item menu-item-has-children"><a href="#"><span>Masonry Layouts</span></a>
-												<ul class="sub-menu">
-													<li class="menu-item"><a href="masonry-2-columns.html"><span>2 columns</span></a></li>
-													<li class="menu-item"><a href="masonry-3-columns.html"><span>3 columns</span></a></li>
-												</ul>
-											</li>
-											<li class="menu-item menu-item-has-children"><a href="#"><span>Portfolio Layouts</span></a>
-												<ul class="sub-menu">
-													<li class="menu-item"><a href="portfolio-2-columns.html"><span>2 columns</span></a></li>
-													<li class="menu-item"><a href="portfolio-3-columns.html"><span>3 columns</span></a></li>
-												</ul>
-											</li>
-										</ul>
-									</li>
-									<li class="menu-item"><a href="shop.html"><span>Shop</span></a></li>
-									<li class="menu-item"><a href="contacts.html"><span>Contacts</span></a></li>
+									<li class="menu-item menu-item-home menu-item-has-children"><a href="index.html"><span>Home</span></a>
+									<li class="menu-item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="about-us.html"><span>Our Team</span></a></li>
+									
 								</ul>
 							</nav>
 							<div class="search_wrap search_style_fullscreen search_state_closed">
@@ -226,7 +176,7 @@
 							<div class="wrapper">
 							<div class="post_featured single_team_post_featured">
 								<div class="post_thumb" data-image="images/team-4.jpg" data-title="Maria Moore">
-									<a class="hover_icon hover_icon_view" href="images/team-4.jpg" title="Maria Moore"><img width="770" height="434" alt="Maria Moore" src="images/team-4-770x434.jpg" itemprop="image"></a>
+									<a class="hover_icon hover_icon_view" href="images/team-4.jpg" title="Maria Moore"><img width="770" class="prof-image" height="434" alt="Maria Moore" src="images/team-4-770x434.jpg" itemprop="image"></a>
 								</div>
 								<div class="socials_single_team">
 									<div class="sc_socials sc_socials_type_icons sc_socials_shape_round sc_socials_size_tiny">
@@ -241,15 +191,25 @@
 								<h6 class="team_position">Social Worker</h6>
 								<div class="team_meta"></div>
 								<div class="team_brief_info">
-									<h5 class="team_brief_info_title">Brief info</h5>
-									<div class="team_brief_info_text">
+									<h5 class="team_brief_info_title">Bio</h5>
+									<div class="team_brief_info_text bio">
+										<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt
+											mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
+									</div>
+									<h5 class="team_brief_info_title">Why Do We Need Healing Centered Engagement training in our community?</h5>
+									<div class="team_brief_info_text hec">
+										<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt
+											mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
+									</div>
+									<h5 class="team_brief_info_title">Why is North Omaha Collective (NOC) needed in our community?</h5>
+									<div class="team_brief_info_text noc">
 										<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt
 											mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
 									</div>
 								</div>
 							</div>
 							</div>
-							<div class="post_content" itemprop="articleBody">
+							<!--<div class="post_content" itemprop="articleBody">
 								<div class="columns_wrap vc_custom_1474283872386">
 									<div class="column_container">
 										<div class="column-inner">
@@ -318,7 +278,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div>-->
 							<!-- </div> class="post_content" itemprop="articleBody"> -->
 						</div>
 						<!-- </div> class="itemscope post_item post_item_single_team post_featured_right post_format_standard post-333 team type-team status-publish has-post-thumbnail hentry" itemscope itemtype="http://schema.org/Article"> -->
@@ -454,5 +414,6 @@
 	<script type='text/javascript' src='js/vendor/fw/js/swiper/swiper.js'></script>
 	<script type='text/javascript' src='js/custom/global.js'></script>
 	<script type='text/javascript' src='js/vendor/fw/js/magnific/jquery.magnific-popup.min.js'></script>
+	<script src="js/profile.js"></script>
 </body>
 </html>
