--- a/about-us.html
+++ b/about-us.html
@@ -257,7 +257,7 @@
 														class="sc_team sc_team_style_team-1  margin_top_huge margin_bottom_large">
 														<h2
 															class="sc_team_title sc_item_title sc_item_title_without_descr">
-															Our Team</h2>
+															Our Team of Healing Centered Engagement Practioners</h2>
 														<div class="sc_team_descr sc_item_descr">This wonderfull people
 															make it all possible</div>
 
